test/files/neg/t1878-typer.scala
object Test extends App {
  // illegal - bug #1764
  null match {
    case <p> { _* } </p> =>
  }
}
